[tool.poetry]
name = "PyWassap"
version = "0.0.1"
description = "PyWassap is a python library for sending WhatsApp messages using the WhatsApp Business API."
authors = ["Aarif Malik <malikarif13@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Aarif1430/pywassap"
documentation = "https://pywassap.netlify.app/"
repository = "https://github.com/Aarif1430/pywassap"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.990"
flake8 = "^5.0.4"
black = {version = "^22.10.0", python = "^3.7"}
pillow = {version = "^9.3.0", python = "^3.7"}
cairosvg = {version = "^2.5.2", python = "^3.7"}
mkdocs = "^1.2.1"
mkdocs-material = "^8.1.4"
mdx-include = "^1.4.1"
coverage = {extras = ["toml"], version = "^6.2"}
autoflake = "^1.4"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
parallel = true
source = [
    "docs",
    "tests",
    "pywassap",
]
context = '${CONTEXT}'

[tool.isort]
profile = "black"
known_third_party = ["pywassap"]
skip_glob = [
    "pywassap/__init__.py",
    ]
[tool.pytest.ini_options]
log_cli = false

[tool.mypy]
strict = true
implicit_reexport = true
